--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
   <script type="module">
     const project_map = {
-        "proj_Y7vPlBXiEsm81ee4N8GB8ZfR": "alibaba-supplier-sourcing",
-        "proj_GKqy5PqiVUckBOuL4dGCX2jP":"product-research-platform" 
+        "proj_Y7vPlBXiEsm81ee4N8GB8ZfR": "alibaba-supplier-sourcing(rj)",
+        "proj_GKqy5PqiVUckBOuL4dGCX2jP":"product-research-platform(rj)",
+        "proj_m1ygfUH6kqqr96sMAE7JLL8O": "product-tracker(christian)
     }
     const API_KEY = prompt("OpenAI Usage API Key:");
     const projectSelect = document.getElementById('projectSelect');
